--- a/car_destaques.html
+++ b/car_destaques.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +9,34 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!--Links estilo-->
-	<link href="dist/style.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+	<link href="src/style.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+		integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
 </head>
 
 <body>
 	<div id="myCardestaque" class="carousel slide" data-ride="carousel2" data-interval="0">
 		<div class="carousel-inner">
-
-			<!--1° ABA DO CARROSSEL-->
+			
+			<!--1° ABA DO CARROSSEL -->
 			<div class="carousel-item active" alt="0">
 				<div class="row">
 					<div class="col-sx product-grid1" style=" width: 193px; height: 448px; ">
 						<div class="ticket_new">
 							<span class="product-new-label">Novo</span>
 						</div>
+
 						<div class="product-image4">
 							<a href="detalhe_produto.php?cod_livro=<?php echo $cod_livro; ?>">
-								<img class="pic-1" style="width: 180px;height: 240px;" src='./dist/img/img-fundo.png'>
+								<img class="pic-1" style="width: 180px;height: 240px;" src='./src/img/img-fundo.png'>
 							</a>
 						</div>
 						<div class="product-content1 ">
@@ -50,6 +56,7 @@
 									<i class="fa-solid fa-cart-shopping"></i> + Carrinho</button>
 								<a class="btn btn-outline-success btn-sm " href=" ">Comprar</a>
 							</div>
+
 						</div>
 					</div>
 
@@ -60,7 +67,7 @@
 
 						<div class="product-image4">
 							<a href="detalhe_produto.php?cod_livro=<?php echo $cod_livro; ?>">
-								<img class="pic-1" style="width: 180px;height: 240px;" src='./dist/img/img-fundo.png'>
+								<img class="pic-1" style="width: 180px;height: 240px;" src='./src/img/img-fundo.png'>
 							</a>
 						</div>
 						<div class="product-content1 ">
@@ -92,7 +99,7 @@
 
 						<div class="product-image4">
 							<a href="detalhe_produto.php?cod_livro=<?php echo $cod_livro; ?>">
-								<img class="pic-1" style="width: 180px;height: 240px;" src='./dist/img/img-fundo.png'>
+								<img class="pic-1" style="width: 180px;height: 240px;" src='./src/img/img-fundo.png'>
 							</a>
 						</div>
 						<div class="product-content1 ">
@@ -123,7 +130,7 @@
 
 						<div class="product-image4">
 							<a href="detalhe_produto.php?cod_livro=<?php echo $cod_livro; ?>">
-								<img class="pic-1" style="width: 180px;height: 240px;" src='./dist/img/img-fundo.png'>
+								<img class="pic-1" style="width: 180px;height: 240px;" src='./src/img/img-fundo.png'>
 							</a>
 						</div>
 						<div class="product-content1 ">
@@ -154,7 +161,7 @@
 
 						<div class="product-image4">
 							<a href="detalhe_produto.php?cod_livro=<?php echo $cod_livro; ?>">
-								<img class="pic-1" style="width: 180px;height: 240px;" src='./dist/img/img-fundo.png'>
+								<img class="pic-1" style="width: 180px;height: 240px;" src='./src/img/img-fundo.png'>
 							</a>
 						</div>
 						<div class="product-content1 ">
@@ -185,7 +192,7 @@
 
 						<div class="product-image4">
 							<a href="detalhe_produto.php?cod_livro=<?php echo $cod_livro; ?>">
-								<img class="pic-1" style="width: 180px;height: 240px;" src='./dist/img/img-fundo.png'>
+								<img class="pic-1" style="width: 180px;height: 240px;" src='./src/img/img-fundo.png'>
 							</a>
 						</div>
 						<div class="product-content1 ">
@@ -211,9 +218,8 @@
 					</div>
 				</div>
 			</div>
-			<!--1° ABA DO CARROSSEL-->
 
-			<!--2° ABA DO CARROSSEL-->
+			<!--2° ABA DO CARROSSEL -->
 			<div class="carousel-item" alt="1">
 				<div class="row ">
 					<div class="col-sx product-grid1" style=" width: 193px; height: 448px; ">
@@ -223,7 +229,7 @@
 
 						<div class="product-image4">
 							<a href="detalhe_produto.php?cod_livro=<?php echo $cod_livro; ?>">
-								<img class="pic-1" style="width: 180px;height: 240px;" src='./dist/img/img-fundo.png'>
+								<img class="pic-1" style="width: 180px;height: 240px;" src='./src/img/img-fundo.png'>
 							</a>
 						</div>
 						<div class="product-content1 ">
@@ -255,7 +261,7 @@
 
 						<div class="product-image4">
 							<a href="detalhe_produto.php?cod_livro=<?php echo $cod_livro; ?>">
-								<img class="pic-1" style="width: 180px;height: 240px;" src='./dist/img/img-fundo.png'>
+								<img class="pic-1" style="width: 180px;height: 240px;" src='./src/img/img-fundo.png'>
 							</a>
 						</div>
 						<div class="product-content1 ">
@@ -287,7 +293,7 @@
 
 						<div class="product-image4">
 							<a href="detalhe_produto.php?cod_livro=<?php echo $cod_livro; ?>">
-								<img class="pic-1" style="width: 180px;height: 240px;" src='./dist/img/img-fundo.png'>
+								<img class="pic-1" style="width: 180px;height: 240px;" src='./src/img/img-fundo.png'>
 							</a>
 						</div>
 						<div class="product-content1 ">
@@ -319,7 +325,7 @@
 
 						<div class="product-image4">
 							<a href="detalhe_produto.php?cod_livro=<?php echo $cod_livro; ?>">
-								<img class="pic-1" style="width: 180px;height: 240px;" src='./dist/img/img-fundo.png'>
+								<img class="pic-1" style="width: 180px;height: 240px;" src='./src/img/img-fundo.png'>
 							</a>
 						</div>
 						<div class="product-content1 ">
@@ -351,7 +357,7 @@
 
 						<div class="product-image4">
 							<a href="detalhe_produto.php?cod_livro=<?php echo $cod_livro; ?>">
-								<img class="pic-1" style="width: 180px;height: 240px;" src='./dist/img/img-fundo.png'>
+								<img class="pic-1" style="width: 180px;height: 240px;" src='./src/img/img-fundo.png'>
 							</a>
 						</div>
 						<div class="product-content1 ">
@@ -382,7 +388,7 @@
 
 						<div class="product-image4">
 							<a href="detalhe_produto.php?cod_livro=<?php echo $cod_livro; ?>">
-								<img class="pic-1" style="width: 180px;height: 240px;" src='./dist/img/img-fundo.png'>
+								<img class="pic-1" style="width: 180px;height: 240px;" src='./src/img/img-fundo.png'>
 							</a>
 						</div>
 						<div class="product-content1 ">
@@ -407,11 +413,10 @@
 					</div>
 				</div>
 			</div>
-			<!--2° ABA DO CARROSSEL-->
 
 		</div>
 
-		<!--INDICADORES-->
+		<!--</INDICADORES> -->
 		<a class="carousel-control-prev" style="display:flex; width:12%;" href="#myCardestaque" role="button"
 			data-slide="prev">
 			<span class="material-symbols-outlined" style=" font-size:55px; color:black">arrow_back_ios</span>
@@ -420,9 +425,9 @@
 			data-slide="next">
 			<span class="material-symbols-outlined" style="font-size:55px; color:black">arrow_forward_ios</span>
 		</a>
-		<!--INDICADORES-->
+		<!--</INDICADORES> -->
 	</div>
-
+	
 	<script src="script.js"></script>
 </body>
 
